# ytdl

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  vcpkg.json
include/ytdl/: download.hpp  env.hpp  presets.hpp  url_parsing.hpp  user_args.hpp  utils.hpp
src/: CMakeLists.txt  download.cpp  env.cpp  presets.cpp  url_parsing.cpp  user_args.cpp  utils.cpp  ytdl.cpp
test/: CMakeLists.txt  ytdl_test.cpp
